default/objects/Karta_CCS_Limit__c/Karta_CCS_Limit__c.object-meta.xml
<CustomObject>
    <description>Karta CCS Limit.</description>
    <label>Karta CCS Limit</label>
    <nameField>
        <label>Karta CCS Limit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Karta CCS Limit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>