default/objects/Karta_CCS_Limit__c/fields/Aktivovat_zadavani_stavu_kilometru__c.field-meta.xml
<CustomField>
    <fullName>Aktivovat_zadavani_stavu_kilometru__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aktivovat zadávání stavu kilometrů.</description>
    <inlineHelpText>Aktivovat zadávání stavu kilometrů.</inlineHelpText>
    <label>Aktivovat zadávání stavu kilometrů</label>
    <type>Checkbox</type>
</CustomField>