default/objects/Karta_CCS_Limit__c/fields/Denni_limit_v_Kc__c.field-meta.xml
<CustomField>
    <fullName>Denni_limit_v_Kc__c</fullName>
    <description>Denní limit v Kč.</description>
    <inlineHelpText>Denní limit v Kč.</inlineHelpText>
    <label>Denní limit v Kč</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>