default/objects/Karta_CCS_Limit__c/fields/EV_Charging__c.field-meta.xml
<CustomField>
    <fullName>EV_Charging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the client activate EV Charging option on CCS Limit card?</description>
    <label>EV Charging</label>
    <type>Checkbox</type>
</CustomField>