default/objects/Karta_CCS_Limit__c/fields/Objednavka_CCS_Limit__c.field-meta.xml
<CustomField>
    <fullName>Objednavka_CCS_Limit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Objednávka CCS Limit.</description>
    <inlineHelpText>Objednávka CCS Limit.</inlineHelpText>
    <label>Objednávka CCS Limit</label>
    <referenceTo>CCS_Limit__c</referenceTo>
    <relationshipLabel>Karta CCS Limit</relationshipLabel>
    <relationshipName>Karta_CCS_Limit</relationshipName>
    <type>Lookup</type>
</CustomField>