default/objects/Karta_CCS_Limit__c/fields/RZ_vozidla_nebo_jmeno_ridice__c.field-meta.xml
<CustomField>
    <fullName>RZ_vozidla_nebo_jmeno_ridice__c</fullName>
    <description>RZ vozidla nebo jméno řidiče.</description>
    <inlineHelpText>RZ vozidla nebo jméno řidiče.</inlineHelpText>
    <label>RZ vozidla nebo jméno řidiče</label>
    <length>30</length>
    <type>Text</type>
</CustomField>