default/objects/Karta_CCS_Limit__c/fields/Typ_vozidla__c.field-meta.xml
<CustomField>
    <fullName>Typ_vozidla__c</fullName>
    <description>Typ vozidla.</description>
    <inlineHelpText>Typ vozidla.</inlineHelpText>
    <label>Typ vozidla</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Osobní auto</fullName>
            </value>
            <value>
                <fullName>Nákladní auto</fullName>
            </value>
            <value>
                <fullName>Traktor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>