default/objects/Karta_CCS_Limit__c/fields/Zablokovat_zmenu_PIN_kodu__c.field-meta.xml
<CustomField>
    <fullName>Zablokovat_zmenu_PIN_kodu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Zablokovat změnu PIN kódu.</description>
    <inlineHelpText>Zablokovat změnu PIN kódu.</inlineHelpText>
    <label>Zablokovat změnu PIN kódu</label>
    <type>Checkbox</type>
</CustomField>